# maestro_py_utils/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paestro"
version = "0.3.0"
authors = [
  { name="Mario Fabre", email="admin@mariofabre.dev" },
]
description = "A collection of Python utilities for the Maestro platform."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "pytz>=2024.2",
]

[project.urls]
Homepage = "https://github.com/mariotafner/paestro"